--- a/task_a/makefile
+++ b/task_a/makefile
@@ -3,13 +3,9 @@ CC = gcc
 AR = ar -rcs
 OBJECTS_MAIN = main.o
 OBJECTS_LIB = hello_ariel.o
-FLAGS = -Wall -fPIC
+FLAGS = -Wall -g -fPIC
 
 all:subtask_1 subtask_2 subtask_3
-mains: $(OBJECTS_MAIN) hello_ariel.a
-	$(CC) $(FLAGS) -o mains $(OBJECTS_MAIN) hello_ariel.a
-maind: $(OBJECTS_MAIN) hello_ariel.so
-	$(CC) $(FLAGS) -o maind main1_2 ./hello_ariel.so
 
 hello_ariel_s: lib_hello_ariel.a
 hello_ariel.a: $(OBJECTS_LIB) hello_ariel.h
@@ -37,19 +33,19 @@ hello_ariel.o: hello_ariel.c hello_ariel.h
 
 # subtask 1
 subtask_1:main1_1.o hello_ariel.o
-	$(CC) $(FLAGS) -o subtask_1 main1_1.o hello_ariel.o
+	$(CC) $(FLAGS) -o main1_1 main1_1.o hello_ariel.o
 
 # subtask 2
 subtask_2:main1_2.o hello_ariel.so
-	$(CC) $(FLAGS) -o subtask_2 main1_2.o hello_ariel.so
+	$(CC) $(FLAGS) -o main1_2 main1_2.o hello_ariel.so
 	export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
 	
 # subtask 3
 subtask_3:main1_3.o hello_ariel.so
-	$(CC) $(FLAGS) -o subtask_3 main1_2.o ./hello_ariel.so
+	$(CC) $(FLAGS) -o main1_3 main1_2.o ./hello_ariel.so
 	
 .PHONY: clean all hello_ariel_d hello_ariel_s
 
 # clean
 clean:
-	rm -f *.o *.a *.so main mains maind subtask_1 subtask_2 subtask_3
+	rm -f *.o *.a *.so main main1_1 main1_2 main1_3
