started write main2_4.c

--- a/task_b/makefile
+++ b/task_b/makefile
@@ -5,7 +5,7 @@ OBJECTS_MAIN = main.o
 OBJECTS_LIB = hello_ariel.o
 FLAGS = -Wall -g -fPIC
 
-all:subtask_1 subtask_2 subtask_3
+all:subtask_1 subtask_2 subtask_3 subtask_4
 
 # main 2.1
 main2_1.o: 
@@ -19,6 +19,10 @@ main2_2.o:
 main2_3.o:
 	$(CC) $(FLAGS) -c main2_3.c
 
+# main 2.3
+main2_4.o:
+	$(CC) $(FLAGS) -c main2_4.c
+
 # subtask 1
 subtask_1:main2_1.o
 	$(CC) $(FLAGS) -o main2_1 main2_1.o
@@ -30,9 +34,13 @@ subtask_2:main2_2.o
 # subtask 3
 subtask_3:main2_3.o
 	$(CC) $(FLAGS) -o main2_3 main2_3.o
+
+# subtask 4
+subtask_4:main2_4.o
+	$(CC) $(FLAGS) -o main2_4 main2_4.o
 	
 .PHONY: clean all hello_ariel_d hello_ariel_s
 
 # clean
 clean:
-	rm -f *.o *.a *.so main main2_1 main2_2 main2_3
+	rm -f *.o *.a *.so main main2_1 main2_2 main2_3 main2_4
